--- a/frontend/comentarios.html
+++ b/frontend/comentarios.html
@@ -73,13 +73,29 @@
       </p>
     </div>
   </footer>
-
+  <div class="modal" id="activar-modal">
+    <div class="modal-background"></div>
+    <div class="modal-card">
+      <header class="modal-card-head">
+        <p class="modal-card-title">Confirmar eliminación</p>
+      </header>
+      <section class="modal-card-body">
+        <p id="confirmar-mensaje">¿Estás seguro que querés eliminar este comentario?</p>
+      </section>
+      <footer class="modal-card-foot">
+        <button class="button is-danger" onclick="deleteComentario()">Eliminar</button>
+        <button class="button" onclick="cerrarModalConfirmacion()">Cancelar</button>
+      </footer>
+    </div>
+  </div>
   <script src="./src/env.js"></script>
   <script src="./src/string_utils.js"></script>
   <script src="./src/navbar.js"></script>
   <script>
     const comentariosUrl = window._env_.API_URL + "/comentarios";
     const juegosUrl = window._env_.API_URL + "/comentarios/juegos";
+    let idAEliminar = null;
+    let nombreAEliminar = "";
     async function cargaJuegos() {
       try {
         const response = await fetch(juegosUrl);
@@ -186,29 +202,33 @@
         });
     }
 
-    function eliminarComentario(id) {
-      fetch(`${comentariosUrl}/${id}`, { method: "DELETE" })
+    function confirmDelete(button) {
+      idAEliminar = button.dataset.id;
+      nombreAEliminar = button.dataset.nombre;
+      document.getElementById("confirmar-mensaje").textContent =  `¿Eliminar comentario de "${nombreAEliminar}"?`;
+      document.getElementById("activar-modal").classList.add("is-active");
+    }
+
+    function cerrarModalConfirmacion() {
+      document.getElementById("activar-modal").classList.remove("is-active");
+      idAEliminar = null;
+      nombreAEliminar = "";
+    }
+
+    function deleteComentario() {
+      if (!idAEliminar) return;
+      fetch(`${comentariosUrl}/${idAEliminar}`, { method: "DELETE" })
         .then(res => {
-          if (!res.ok) return res.text().then(text => { throw new Error(text); });
-          return res.json();
-        })
-        .then(() => {
-          showInfoNotification("Comentario eliminado");
+          if (!res.ok) throw new Error("Error al eliminar el comentario.");
           cargarComentarios();
+          showInfoNotification(`Comentario de "${nombreAEliminar}" eliminado.`);
         })
         .catch(err => {
           console.error(err);
-          showErrorNotification(err.message);
-        });
+          showErrorNotification(`Comentario de "${nombreAEliminar}" eliminado.`);
+        })
+        .finally(() => cerrarModalConfirmacion());
     }
-
-    function confirmDelete(button) {
-      if (confirm(`¿Eliminar comentario de "${button.dataset.nombre}"?`)) {
-        document.getElementById("navbar-container").scrollIntoView({ behavior: 'smooth' });
-        eliminarComentario(button.dataset.id);
-      }
-    }
-
     function showInfoNotification(message) {
       closeNotification("notification-container-error");
       const container = document.getElementById("notification-container-info");
